tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float16_4D_NHWC_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 4D NHWC tensor all options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: In 'ios17.batch_norm' operations, tensors parameter mean[0], parameter variance[0], parameter beta[0], parameter gamma[0], and parameter epsilon[0] must have the same data type.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[2, 2, 2, 3];
  }

  consts {
    operand_0: f16[3] @bytes([3, 84, 181, 84, 73, 213]);
    operand_2: f16[3] @bytes([116, 82, 54, 86, 2, 214]);
    operand_3: f16[3] @bytes([24, 84, 112, 212, 146, 197]);
    operand_4: f16[3] @bytes([157, 79, 102, 85, 158, 84]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_2, operand_4, axis=3, bias=0, epsilon=1e-6, label="", scale=3);
  }

  outputs { bnOutput; }
}
