tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 5D tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: In 'ios17.batch_norm' operations, tensors parameter mean[0], parameter variance[0], parameter beta[0], parameter gamma[0], and parameter epsilon[0] must have the same data type.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[6, 1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1] @bytes([109, 80]);
    operand_2: f16[1] @bytes([30, 81]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
