tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float32_2D_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization_constant.https.any.js batchNormalization float32 2D constant tensors default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: parameter x[0] has invalid rank 2, expected [3, 5].

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[4, 6] @bytes([181, 58, 37, 194, 98, 45, 128, 66, 182, 129, 125, 194, 86, 41, 59, 194, 103, 11, 166, 66, 54, 41, 160, 194, 216, 147, 120, 194, 195, 15, 205, 189, 208, 155, 35, 194, 45, 218, 99, 66, 112, 125, 21, 66, 152, 47, 100, 66, 21, 29, 164, 66, 157, 59, 172, 194, 48, 196, 153, 66, 55, 17, 194, 66, 238, 206, 170, 193, 97, 224, 193, 194, 188, 191, 21, 193, 159, 106, 160, 66, 110, 188, 170, 194, 76, 104, 121, 66, 227, 241, 136, 194, 245, 182, 65, 193]);
    operand_1: f32[6] @bytes([123, 14, 250, 192, 88, 72, 191, 194, 28, 158, 24, 66, 226, 206, 95, 194, 226, 186, 175, 194, 187, 139, 38, 194]);
    operand_2: f32[6] @bytes([89, 63, 113, 66, 249, 117, 211, 65, 64, 26, 85, 66, 161, 149, 32, 66, 217, 164, 109, 66, 208, 255, 15, 66]);
  }

  nodes {
    [bnOutput] = batchNormalization(operand_0, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
