tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float32 2D tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: parameter x[0] has invalid rank 2, expected [3, 5].

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f32[4, 6];
  }

  consts {
    operand_1: f32[6] @bytes([123, 14, 250, 192, 88, 72, 191, 194, 28, 158, 24, 66, 226, 206, 95, 194, 226, 186, 175, 194, 187, 139, 38, 194]);
    operand_2: f32[6] @bytes([89, 63, 113, 66, 249, 117, 211, 65, 64, 26, 85, 66, 161, 149, 32, 66, 217, 164, 109, 66, 208, 255, 15, 66]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
